--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "jwt-decode": "^4.0.0",
     "lucide": "^0.552.0",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
