--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paystack/inline-js": "^2.22.7",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.6"
   },
