--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_PAYSTACK_PUBLIC_KEY = "pk_test_931ab31ab04513d01a3e5eafa7b915cd0189d7e8"
-VITE_LIVE_HOST = ""
+VITE_LIVE_HOST = "https://justlink-api.vercel.app/"
