--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@paystack/inline-js": "^2.22.7",
     "axios": "^1.13.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.552.0",
